<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        
        <item
            android:id="@+id/nav_food_recognition"
            android:icon="@drawable/ic_camera"
            android:title="@string/food_recognition" />
        
        <item
            android:id="@+id/nav_meal_tracking"
            android:icon="@drawable/ic_food"
            android:title="@string/meal_tracking" />
        
        <item
            android:id="@+id/nav_health_reports"
            android:icon="@drawable/ic_health"
            android:title="@string/health_reports" />
        
        <item
            android:id="@+id/nav_health_dashboard"
            android:icon="@drawable/ic_steps"
            android:title="Health Dashboard" />
        
        <item
            android:id="@+id/nav_meal_planning"
            android:icon="@drawable/ic_calendar"
            android:title="@string/meal_planning" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/profile" />
            
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>

